clang/test/BSC/Negative/Coroutine/Other/invalid-await-expression/invalid-await-expression.cbs
// RUN: %clang_cc1 -internal-isystem %S/../../../../../../lib/Headers/bsc_include -verify %s 

#include "../../async-func-read-opposite.hbs"

_Trait Future<int>* f() { // expected-error {{await expression is not allowed to appear in non-async function.}}
    _Trait Future<int>*f;
    int a = await read(1);
    return f;
}

int main() {
  return 0;
}